--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 
 
         </div>
+
+
+        <div class="caption">
+            <h3>MCKENZIE</h3>
+            <h1>Twin Amber Sofa</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Ut enim ad minim veniam, quis nostrud exercitation</p>
+            <div class="add-to-cart">Add to cart</div>
+        </div>
+
         <div class="header">
             <div class="social-links-holder">
                 <div class="links">
