--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <div class="switch">
+        <span>switch to Desktop View</span><h1>🥱</h1>
+    </div>
     <div class="container">
         <div class="logoimage">
             <img src="./img/Shape.png" alt="shape">
