--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="switch">
-        <span>switch to Desktop View</span><h1>🥱</h1>
+        <span>Use your laptop</span><h1>🥱</h1>
     </div>
     <div class="container">
         <div class="logoimage">
