--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link rel="stylesheet" href="./fontawesome/css/all.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="switch">
@@ -95,6 +95,6 @@
         </div>
         <div class="pop-up"></div>
     </div>
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
